Upgrade to iText 5.0.6
git-svn-id: https://fb2pdf.googlecode.com/svn/trunk/src/java@745 f05116cd-5028-0410-9863-11db5debc633