@@ -1,5 +1,5 @@
 /*
- * $Id: Section.java 4242 2010-01-02 23:22:20Z xlv $
+ * $Id: Section.java 4645 2011-01-06 15:16:40Z redlab_b $
  *
  * This file is part of the iText project.
  * Copyright (c) 1998-2009 1T3XT BVBA
@@ -639,7 +639,7 @@ public class Section extends ArrayList<Element> implements TextElementArray, Lar
      * Changes the Chapter number.
      */
     public void setChapterNumber(int number) {
-    	numbers.set(numbers.size() - 1, new Integer(number));
+    	numbers.set(numbers.size() - 1, Integer.valueOf(number));
     	Object s;
     	for (Iterator<Element> i = iterator(); i.hasNext(); ) {
     		s = i.next();
@@ -668,7 +668,7 @@ public class Section extends ArrayList<Element> implements TextElementArray, Lar
      */
     private void setNumbers(int number, ArrayList<Integer> numbers) {
         this.numbers = new ArrayList<Integer>();
-        this.numbers.add(new Integer(number));
+        this.numbers.add(Integer.valueOf(number));
         this.numbers.addAll(numbers);
     }
 
