@@ -1,5 +1,5 @@
 /*
- * $Id: PdfStructureTreeRoot.java 4242 2010-01-02 23:22:20Z xlv $
+ * $Id: PdfStructureTreeRoot.java 4645 2011-01-06 15:16:40Z redlab_b $
  *
  * This file is part of the iText project.
  * Copyright (c) 1998-2009 1T3XT BVBA
@@ -101,7 +101,7 @@ public class PdfStructureTreeRoot extends PdfDictionary {
     }
 
     void setPageMark(int page, PdfIndirectReference struc) {
-        Integer i = new Integer(page);
+        Integer i = Integer.valueOf(page);
         PdfArray ar = (PdfArray)parentTree.get(i);
         if (ar == null) {
             ar = new PdfArray();
